images management using cloudinary

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 PORT=8002
 MONGO_URI=mongodb://127.0.0.1/blogDb
 JWT_SECRET=privateprivate
+
+CLOUDINARY_CLOUD_NAME=du4hhr6be
+CLOUDINARY_CLOUD_API=212987426797177
+CLOUDINARY_CLOUD_SECRET=D1wWD_HI9RauLfcw4D5oY3kFDmA
