--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ JWT_SECRET=privateprivate
 CLOUDINARY_CLOUD_NAME=du4hhr6be
 CLOUDINARY_CLOUD_API=212987426797177
 CLOUDINARY_CLOUD_SECRET=D1wWD_HI9RauLfcw4D5oY3kFDmA
+
+APP_EMAIL_ADRESS=omarcherti@gmail.com
+APP_EMAIL_APP_PASSWORD=wgqb amyu nbdc aklv
