--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,15 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.2",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "xss-clean": "^0.1.4"
   }
 }
